--- a/index.html
+++ b/index.html
@@ -699,10 +699,10 @@ const textureLoader = new THREE.TextureLoader();
 
 // Load terrain textures
     const textures = {
-        color: textureLoader.load('fart/text.png'),
-        normal: textureLoader.load('fart/normal.png'),
-        ao: textureLoader.load('fart/ao.png'),
-        rough: textureLoader.load('fart/rough.png'),
+        color: textureLoader.load('text.png'),
+        normal: textureLoader.load('normal.png'),
+        ao: textureLoader.load('ao.png'),
+        rough: textureLoader.load('rough.png'),
     };
 
     // Configure texture properties
