--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ const textureLoader = new THREE.TextureLoader();
     const textures = {
         color: textureLoader.load('text.png'),
         normal: textureLoader.load('normal.png'),
-        ao: textureLoader.load('ao.png'),
+        ao: textureLoader.load('AO.png'),
         rough: textureLoader.load('rough.png'),
     };
 
